--- a/mtns.html
+++ b/mtns.html
@@ -4,7 +4,7 @@
   <title> I love mountains </title>
  </head>
  <body>
-  <h1> "I like spending time in the mountains" </h1>
+  <h1> I like spending time in the mountains </h1>
   <img src = "mountain pic.jpg" alt="mountains" width="50%">
  </body>
 </html>
