--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>Go places from here</title>
     </head>
     <body>
-        Hello, world!
+        <ul>
+            <li> <a href="mtns.html"> I want to go to the mountains </a> </li>
+             
     </body>
 </html>
