--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>Go places from here</title>
     </head>
     <body>
+        <hl> Where do you want to go from here? </h1>
         <ul>
-            <li> <a href="mtns.html"> I want to go to the mountains </a> </li>
+            <li> <a href="mtns.html"> To the mountains! </a> </li>
+            <li> I want to meet your dog! </li>
+            <li> Cool science! </li>
+            <li> I'm more interested in how we get there! </li>
         </ul>     
     </body>
 </html>
