--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>Go places from here</title>
     </head>
     <body>
-        <hl> Where do you want to go from here? </h1>
-        <h3> <ul>
+        <h3> Where do you want to go from here? </h3>
+        <h2> <ul>
             <li> <a href="mtns.html"> To the mountains! </a> </li>
             <li> I want to meet your dog! </li>
             <li> Cool science! </li>
             <li> I'm more interested in how we get there! </li>
-            </ul> </h3>
+            </ul> </h2>
     </body>
 </html>
