--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h3> Where do you want to go from here? </h3>
         <h2> <ul>
             <li> <a href="mtns.html"> To the mountains! </a> </li>
-            <li> I want to meet your dog! </li>
+            <li> <a href="dog.html">I want to meet your dog! </li>
             <li> Cool science! </li>
             <li> I'm more interested in how we get there! </li>
             </ul> </h2>
