--- a/sci.html
+++ b/sci.html
@@ -5,6 +5,6 @@
  </head>
  <body>
   <h1> I enjoy all things science </h1>
-  <img src = "IMG_5317.jpg" alt="science" height="50%">
+  <img src = "IMG_5317.jpg" alt="science" width="50%">
  </body>
 </html>
