--- a/dog.html
+++ b/dog.html
@@ -4,7 +4,7 @@
   <title> I love my dog </title>
  </head>
  <body>
-  <h1> I like spending time in the mountains </h1>
-  <img src = "yuma andme.jpg" alt="Yuma and me" height="50%">
+  <h1> I love my dog </h1>
+  <img src = "yuma andme.png" alt="Yuma and me" height="50%">
  </body>
 </html>
