--- a/dog.html
+++ b/dog.html
@@ -5,6 +5,6 @@
  </head>
  <body>
   <h1> I love my dog </h1>
-  <img src = "yuma andme.png" alt="Yuma and me" height="50%">
+  <img src = "yuma andme.png" alt="Yuma and me" height="400">
  </body>
 </html>
