--- a/mtns.html
+++ b/mtns.html
@@ -5,7 +5,7 @@
  </head>
  <body>
   <h1> I like spending time in the mountains </h1>
-  <img src = "mountain pic.jpg" alt="mountains" height="50%">
+  <img src = "mountain pic.jpg" alt="mountains" height="400">
  </body>
 </html>
   
