--- a/bike.html
+++ b/bike.html
@@ -5,6 +5,6 @@
  </head>
  <body>
   <h1> I like biking to get there </h1>
-  <img src = "IMG_1353_a.jpg" alt="Cycling" height="30%">
+  <img src = "IMG_1353_a.jpg" alt="Cycling" width="50%">
  </body>
 </html>
