--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <h3> Where do you want to go from here? </h3>
         <h2> <ul>
             <li> <a href="mtns.html"> To the mountains! </a> </li>
-            <li> <a href="dog.html"> I want to meet your dog! </li>
-            <li> <a href="sci.html">Cool science! </li>
-            <li> <a href="bike.html">I'm more interested in how we get there! </li>
+            <li> <a href="dog.html"> I want to meet your dog! </a> </li>
+            <li> <a href="sci.html">Cool science! </a></li>
+            <li> <a href="bike.html">I'm more interested in how we get there! </a></li>
             </ul> </h2>
         
         <div class="alert alert-primary" role="alert">
