--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <span aria-hidden="true">&times;</span>
+</button>
         
     </body>
     
