--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 border: 2px gray;
                 border-collapse: collapse;
                 widt:50% }
-            th, td {padding:5px; margin:20px}
+            th, td {padding:5px 20px}
             th {background-color:lightgray;}
             </style>
         
