--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 width:50% }
             th, td {padding:5px 20px}
             th {background-color:lightgray;}
-            h1 h2 h3 h4 h5 { padding: 5px 20px}
+            h1, h2, h3, h4, h5 { padding: 5px 20px}
         </style>
         
         
