--- a/index_aligned.html
+++ b/index_aligned.html
@@ -65,8 +65,10 @@
             </tr>
         </table>
 
-    .box>* {flota:right;}
-    .box {display:flex;}
+    .box { display: flex;
+        align-items: right }
+    .box div { width: 100px; height 100px;}
+
     <div class="box">
           <div>Some starter stuff</div>
           <div>Images maybe here</div>
