--- a/index_aligned.html
+++ b/index_aligned.html
@@ -65,16 +65,7 @@
             </tr>
         </table>
 
-    .box { display: flex;
-        align-items: right }
-    .box div { width: 100px; height 100px;}
-
-    <div class="box">
-          <div>Some starter stuff</div>
-          <div>Images maybe here</div>
-          <div>idk</div>
-        </div>
-      
+    .container { flex-wrap: wrap; justify-content: space-evenly ; felx-start; }
 
 
         
