--- a/index_aligned.html
+++ b/index_aligned.html
@@ -19,7 +19,7 @@
             h3 {padding: 20px}
         </style>
         
-        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary" onclick="background-color:green">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
         <button type="button" class="btn btn-success">Success</button>
         <button type="button" class="btn btn-danger">Danger</button>
