--- a/index_aligned.html
+++ b/index_aligned.html
@@ -28,6 +28,10 @@
         <button type="button" class="btn btn-light">Light</button>
         <button type="button" class="btn btn-dark">Dark</button>
       
+        background-image: href="climb1.png";
+        background-repeat: no-repeat;
+        background-position: right top;
+        margin-right: 200px;
         
         <h3> Where do you want to go from here? </h3>
         <h2> <ul>
