--- a/index_aligned.html
+++ b/index_aligned.html
@@ -28,7 +28,7 @@
         <button type="button" class="btn btn-light">Light</button>
         <button type="button" class="btn btn-dark">Dark</button>
       
-        background-image: href="climb1.png";
+        background-image: "climb1.jpg";
         background-repeat: no-repeat;
         background-position: right top;
         margin-right: 200px;
