--- a/index_aligned.html
+++ b/index_aligned.html
@@ -22,7 +22,7 @@
                 background-image: url("climb1.jpg");
                 background-repeat: no-repeat;
                 background-position: right top;
-                margin-right: 200px;
+                margin-right: 50%;
             }
         </style>
         
