--- a/index_aligned.html
+++ b/index_aligned.html
@@ -19,7 +19,7 @@
             h3 {padding: 20px}
             
             body{
-                background-image: url("climb1.jpg");
+                background-image: url("climb1.jpg") width ="30%";
                 background-repeat: no-repeat;
                 background-position: right top;
                 margin-right: 200px;
