--- a/index_aligned.html
+++ b/index_aligned.html
@@ -23,6 +23,7 @@
                 background-repeat: no-repeat;
                 background-position: right top;
                 margin-right: 200px;
+                border = 5px solid black
             }
         </style>
         
