--- a/index_aligned.html
+++ b/index_aligned.html
@@ -19,6 +19,7 @@
             h3 {padding: 20px}
             
             body{
+                background-color: rbga(0, 50, 30, 0.2);
                 background-image: url("climb1.jpg");
                 background-repeat: no-repeat;
                 background-position: right top;
