--- a/mtns.html
+++ b/mtns.html
@@ -7,5 +7,20 @@
   <h1> I like spending time in the mountains </h1>
   <img src = "mountain pic.jpg" alt="mountains" height="400">
  </body>
+ 
+ <style>
+  .container { display: flex; display: wrap;}
+  .container > div {background-color: gray; width: 200px; padding: 20px}
+ </style>
+ 
+ <div class ="container">
+  <div> A. weorfihrqlw </div>
+  <div> A. weorfihrqlw </div>
+  <div> A. weorfihrqlw </div>
+  <div> A. weorfihrqlw </div>
+  <div> A. weorfihrqlw </div>
+  <div> A. weorfihrqlw </div>
+ </div>
+ 
 </html>
   
