--- a/mtns.html
+++ b/mtns.html
@@ -9,17 +9,22 @@
  </body>
  
  <style>
-  .container { display: flex; display: wrap;}
-  .container > div {background-color: gray; width: 200px; padding: 20px}
+  .container { 
+   display: flex; 
+   display: wrap;}
+  .container > div {
+   background-color: gray; 
+   width: 200px; 
+   padding: 20px}
  </style>
  
  <div class ="container">
-  <div> A. weorfihrqlw </div>
-  <div> A. weorfihrqlw </div>
-  <div> A. weorfihrqlw </div>
-  <div> A. weorfihrqlw </div>
-  <div> A. weorfihrqlw </div>
-  <div> A. weorfihrqlw </div>
+  <div> Enjoyed. Colorado Rockies </div>
+  <div> Need to Go. Candaian Rockies </div>
+  <div> Enjoyed. Squamish </div>
+  <div> Enjoyed. Sardinia </div>
+  <div> Enjoyed. Alps </div>
+  <div> Need to Go.  Patagonia </div>
  </div>
  
 </html>
