--- a/mtns.html
+++ b/mtns.html
@@ -9,13 +9,8 @@
  </body>
  
  <style>
-  .container { 
-   display: flex; 
-   display: wrap;}
-  .container > div {
-   background-color: gray; 
-   width: 200px; 
-   padding: 20px}
+  .container { isplay: flex;    flex-wrap: wrap;}
+  .container > div {   background-color: gray;    width: 200px;    padding: 20px}
  </style>
  
  <div class ="container">
