--- a/mtns.html
+++ b/mtns.html
@@ -9,7 +9,7 @@
  </body>
  
  <style>
-  .container { isplay: flex;    flex-wrap: wrap;}
+  .container { display: flex;  }
  </style>
  
  <div class ="container">
