--- a/mtns.html
+++ b/mtns.html
@@ -8,11 +8,7 @@
   <img src = "mountain pic.jpg" alt="mountains" height="400">
  </body>
  
- <style>
-  .container { display: flex;  }
- </style>
- 
- <div class ="container">
+ <div class ="flex-container">
   <div> Enjoyed. Colorado Rockies </div>
   <div> Need to Go. Candaian Rockies </div>
   <div> Enjoyed. Squamish </div>
