--- a/mtns.html
+++ b/mtns.html
@@ -8,6 +8,9 @@
   <img src = "mountain pic.jpg" alt="mountains" height="400">
  </body>
  
+ <style>
+  .flex-container { justify-content: space-between; height: 200px; align-items:center }
+ 
  <div class ="flex-container">
   <div> Enjoyed. Colorado Rockies </div>
   <div> Need to Go. Candaian Rockies </div>
