--- a/mtns.html
+++ b/mtns.html
@@ -10,6 +10,7 @@
  
  <style>
   .flex-container { justify-content: space-between; height: 200px; align-items:center }
+ </style>
  
  <div class ="flex-container">
   <div> Enjoyed. Colorado Rockies </div>
