--- a/mtns.html
+++ b/mtns.html
@@ -9,7 +9,10 @@
  </body>
  
  <style>
-  .flex-container { justify-content: space-between; height: 200px; align-items:center }
+  .flex-container { justify-content: space-between; height: 200px; align-items:center 
+  background-color: green;
+  padding: 20px;
+  }
  </style>
  
  <div class ="flex-container">
