--- a/mtns.html
+++ b/mtns.html
@@ -9,13 +9,12 @@
  </body>
  
  <style>
-  .flex-container { justify-content: space-between; height: 200px; align-items:center; 
-  background-color: green;
-  padding: 20px;
+  .grid { display:grid; background-color: green; padding: 20px; 
+   grid-column-gap: 20px; grid-column-gap: 10px;
   }
  </style>
  
- <div class ="flex-container">
+ <div class ="grid">
   <div> Enjoyed. Colorado Rockies </div>
   <div> Need to Go. Candaian Rockies </div>
   <div> Enjoyed. Squamish </div>
