--- a/mtns.html
+++ b/mtns.html
@@ -15,13 +15,20 @@
  </style>
  
  <div class ="grid">
-  <div> Enjoyed. Colorado Rockies </div>
-  <div> Need to Go. Candaian Rockies </div>
-  <div> Enjoyed. Squamish </div>
-  <div> Enjoyed. Sardinia </div>
-  <div> Enjoyed. Alps </div>
-  <div> Need to Go.  Patagonia </div>
- </div>
+  
+  <div class="row">
+   <div class = "col"> Enjoyed. </div>
+   <div class = "col"> Colorado Rockies </div>
+   <div class = "col"> Squamish </div>
+   <div class = "col"> Sardinia </div>
+   <div class = "col"> French and Italian Alps </div>    
+  </div>
+  
+  <div class="row">
+   <div class = "col"> Need to Go. </div>
+   <div class = "col"> Candaian Rockies </div>
+   <div class = "col"> Patagonia </div>
+  </div>
  
 </html>
   
