--- a/mtns.html
+++ b/mtns.html
@@ -8,12 +8,9 @@
   <img src = "mountain pic.jpg" alt="mountains" height="400">
  </body>
  
- <style>
-  .grid { display:grid; background-color: green; padding: 20px; 
-   grid-column-gap: 20px; grid-column-gap: 10px;
-  }
- </style>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  
+
  <div class ="grid">
   
   <div class="row">
