--- a/mtns.html
+++ b/mtns.html
@@ -11,20 +11,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  
 
- <div class ="grid">
-  
-  <div class="row">
-   <div class = "col"> Enjoyed. </div>
-   <div class = "col"> Colorado Rockies </div>
-   <div class = "col"> Squamish </div>
-   <div class = "col"> Sardinia </div>
-   <div class = "col"> French and Italian Alps </div>    
-  </div>
-  
-  <div class="row">
-   <div class = "col"> Need to Go. </div>
-   <div class = "col"> Candaian Rockies </div>
-   <div class = "col"> Patagonia </div>
+ <div class ="flex-container">
+   <div> Enjoyed. Colorado Rockies </div>
+   <div> Enjoyed. Squamish </div>
+   <div> Enjoyed. Sardinia </div>
+   <div> Enjoyed. French and Italian Alps </div>    
+   <div> Need to Go. Candaian Rockies </div>
+   <div> Need to Go. Patagonia </div>
   </div>
  
 </html>
