--- a/mtns.html
+++ b/mtns.html
@@ -5,7 +5,7 @@
  </head>
  <body>
   
-   <div class ="container">
+   <div class ="panel">
       <h1> I like spending time in the mountains </h1>
       <img src = "mountain pic.jpg" alt="mountains" height="400">
    <div> Enjoyed. Colorado Rockies </div>
