--- a/mtns.html
+++ b/mtns.html
@@ -3,11 +3,16 @@
  <head>
   <title> I love mountains </title>
  </head>
+ 
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+ 
  <body>
   
-   <div class ="panel">
-      <h1> I like spending time in the mountains </h1>
-      <img src = "mountain pic.jpg" alt="mountains" height="400">
+   <div class ="container-fluid">
+    
+    <h1> I like spending time in the mountains </h1>
+    <img src = "mountain pic.jpg" alt="mountains" height="400">
+    
    <div> Enjoyed. Colorado Rockies </div>
    <div> Enjoyed. Squamish </div>
    <div> Enjoyed. Sardinia </div>
@@ -17,8 +22,6 @@
   </div>
   
  </body>
- 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  
 
 
