--- a/mtns.html
+++ b/mtns.html
@@ -13,12 +13,12 @@
     <h1> I like spending time in the mountains </h1>
     <img src = "mountain pic.jpg" alt="mountains" height="400">
     
-   <div> Enjoyed. Colorado Rockies </div>
-   <div> Enjoyed. Squamish </div>
-   <div> Enjoyed. Sardinia </div>
-   <div> Enjoyed. French and Italian Alps </div>    
-   <div> Need to Go. Candaian Rockies </div>
-   <div> Need to Go. Patagonia </div>
+   <div class col-sm-3> Enjoyed. Colorado Rockies </div>
+   <div class col-sm-3> Enjoyed. Squamish </div>
+   <div class col-sm-3> Enjoyed. Sardinia </div>
+   <div class col-sm-3> Enjoyed. French and Italian Alps </div>    
+   <div class col-sm-3> Need to Go. Candaian Rockies </div>
+   <div class col-sm-3> Need to Go. Patagonia </div>
   </div>
   
  </body>
